--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - uses: satackey/action-docker-layer-caching@v0.0.5
       - name: Build and Push Base Docker Image
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: buckhamduffy/docker-laravel-dusk
-          tags: latest, php7.3
-          path: ./7.3
+          target: base
+          tags: latest, php7.4
