--- a/config/app-supervisord.conf
+++ b/config/app-supervisord.conf
@@ -9,7 +9,14 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:php-fpm]
-command=php-fpm7.3
+command=php-fpm7.4
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+[program:display]
+command=Xvfb -ac :0 -screen 0 1280x1024x16
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
